@@ -1,5 +1,9 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2013-10-07 mmichaud <michael.michaud@free.fr>
+  * can now read all geometries in a shapefile having more shapes in the .shp
+    than records in the .dbf
+
 2013-08-20 ede, happy "German Unity Day" update
   * general performance enhancement for Referenced Image loader, loading is as slow as before but scaling, panning etc. should be much faster
   * all Referenced Image readers selectable/visible in OpenFileWizard now
